// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Copy Dataset Failure scenarios Shouldn't be able to copy a data set with invalid enqueue type 1`] = `
"
Syntax Error:
Invalid value specified for option:
--enqueue (--enq)

You specified:
ABC

The value must match one of the following regular expressions:
[ 'EXCLU', 'SHR' ].

Example:

 - Copy the contents of a data set named 'user.from.set' to 'user.to.set:

      $ zowe zos-files copy data-set \\"user.from.set\\" \\"user.to.set\\"

Use \\"zowe zos-files copy data-set --help\\" to view command description, usage, and options.
"
`;

exports[`Copy Dataset Failure scenarios Shouldn't be able to copy a data set with invalid enqueue type 2`] = `
"================Z/OS FILES COPY DATA SET===============
"
`;

exports[`Copy Dataset Success scenarios Should copy a data set 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy Dataset Success scenarios Should copy a data set with alias = true 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy Dataset Success scenarios Should copy a data set with enqueue = SHR 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;

exports[`Copy Dataset Success scenarios Should copy a data set with from and to volume specified 1`] = `
"================Z/OS FILES COPY DATA SET===============
Data set copied successfully.
"
`;
